v3.11.2 (XXXX-XX-XX)
--------------------

* FE-304, FE-305: use navigator.onLine for checking internet connection, correct
  path for running/slow queries.

* Enforce that server always returns an empty body if the return code is 204.

* Arangodump retries dump requests in more cases: read, write and connection
  errors.

* Whenever there is a query request timeout in AQL (e.g., a server died) which
  causes the query to fail, the DBServers will now all directly kill their
  potentially ongoing parts of the query and not wait for garbage collection.

* Use libunwind in jemalloc profiling to make it available with libmusl and
  static binaries.

* BTS-1331: Reduced the amount of required network calls when using traversals
  combined with FILTER and/or PRUNE statements in a GeneralGraph in combination
  with a clustered environment.

* Added transparent LZ4 compression for values in the in-memory edge cache if
  their size exceeds a configurable threshold. This is configurable as an opt-in
  functionality.

  LZ4 compression of edge index cache values allows to store more data in main
  memory than without compression, so the available memory can be used more
  efficiently. The compression is transparent and does not require any change to
  queries or applications.
  The compression can add CPU overhead for compressing values when storing them
  in the cache, and for decompressing values when fetching them from the cache.
  
  The new startup option `--cache.min-value-size-for-edge-compression` can be
  used to set a threshold value size for compression edge index cache payload
  values. The default value is `1GB`, which will effectively turn compression
  off. Setting the option to a lower value (e.g. `100`) will turn on the
  compression for any payloads whose size exceeds this value.
  
  The new startup option `--cache.acceleration-factor-for-edge-compression` can
  be used to fine-tune the compression. It controls the LZ4-internal